firefam-rs/tui/src/chatwidget/snapshots/firefam_tui__chatwidget__tests__realtime_audio_selection_popup.snap
---
source: tui/src/chatwidget/tests/popups_and_settings.rs
expression: popup
---
  Settings
  Configure settings for Firefam.

› 1. Microphone  Current: System default
  2. Speaker     Current: System default

  ↑/↓ Navigate · enter Select · tab Complete · esc to cancel
