firefam-rs/tui/src/chatwidget/snapshots/firefam_tui__chatwidget__tests__side_context_label_preserves_status_line.snap
---
source: tui/src/chatwidget/tests/side.rs
expression: terminal.backend()
---
"────────────────────────────────────────────────────────────────────────────────"
"  /tmp/project                                                                  "
"› Check recently modified functions for compatibility                           "
"────────────────────────────────────────────────────────────────────────────────"
"  ? he… Side from main thread · Ctrl+C to return · Read Only · gpt-5.5 default  "
