firefam-rs/tui/src/chatwidget/snapshots/firefam_tui__chatwidget__tests__side_context_label_shows_parent_status.snap
---
source: tui/src/chatwidget/tests/side.rs
expression: terminal.backend()
---
"────────────────────────────────────────────────────────────────────────────────"
"  /tmp/project                                                                  "
"› Check recently modified functions for compatibility                           "
"────────────────────────────────────────────────────────────────────────────────"
"  Side from main thread · main needs input · Ctrl+C to return · Read Only · gpt-"
